# nullgeo

./: .gitignore  Cargo.toml  Makefile  README.md
crates/nullgeo/: Cargo.toml
crates/nullgeo-cli/: Cargo.toml
crates/nullgeo-cli/src/: io.rs  main.rs
crates/nullgeo-core/: Cargo.toml
crates/nullgeo-core/src/: camera.rs  integrator.rs  lib.rs  ray.rs
crates/nullgeo-metrics/: Cargo.toml
crates/nullgeo-metrics/src/: lib.rs  minkowski.rs  schwarzschild.rs
crates/nullgeo/src/: camera.rs  integrator.rs  lib.rs  metric.rs
crates/nullgeo/src/metrics/: minkowski.rs  mod.rs  schwarzschild.rs
