[workspace]
members = [
  "crates/nullgeo-core",
  "crates/nullgeo-metrics",
  "crates/nullgeo-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["James Wirth"]
repository = "https://github.com/James-Wirth/nullgeo"
homepage = "https://github.com/James-Wirth/nullgeo"
documentation = "https://docs.rs/nullgeo-core"
readme = "README.md"
categories = ["physics"]
keywords = ["relativity"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "deny"

[workspace.dependencies]
nalgebra = { version = "0.32", default-features = false, features = ["alloc"] }
approx = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
rayon = "1.10"
