[workspace]
members = [
  "crates/nullgeo",
  "crates/nullgeo-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["James Wirth"]
repository = "https://github.com/James-Wirth/nullgeo"
homepage = "https://github.com/James-Wirth/nullgeo"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["relativity", "raytracing", "physics", "geodesics", "spacetime"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "deny"

[workspace.dependencies]
nalgebra = { version = "0.32", default-features = false, features = ["alloc"] }
approx = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
rayon = "1.10"
