[package]
name = "nullgeo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "nullgeo-cli"

[[bin]]
name = "nullgeo"
path = "src/main.rs"

[features]
default = []
parallel = ["nullgeo-core/parallel"]

[dependencies]
nullgeo-core = { path = "../nullgeo-core" }
nullgeo-metrics = { path = "../nullgeo-metrics" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
env_logger = "0.11"
log = "0.4"
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
