[package]
name = "nullgeo-cli"
description = "Command-line ray tracer for null geodesics in arbitrary spacetimes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "nullgeo"
path = "src/main.rs"

[features]
default = []
parallel = ["nullgeo/parallel"]

[dependencies]
nullgeo = { path = "../nullgeo", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
env_logger = "0.11"
log = "0.4"
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
