[package]
name = "nullgeo"
description = "General-relativistic null-geodesic ray tracer (library)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
parallel = ["dep:rayon"]

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
